<resources>
    <string name="app_name">JC-Shop</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_user">Create New User</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signUp">Sing Up</string>
    <string name="already_have_account">Already have account? Login here</string>
    <string name="fullName">FullName</string>
    <string name="mobile">Mobile</string>
    <string name="submit">Submit</string>
    <string name="title_activity_merchant_dashboard">MerchantDashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_your_profile">Your Profile</string>
    <string name="menu_card">Card</string>
    <string name="logout">logout</string>
    <string name="add_to_card">Add To Card</string>
    <string name="menu_order">Your Order</string>
    <string name="menu_deal">Today"\'"s Deal</string>
    <string name="menu_about_us">About US</string>
    <string name="menu_contact_us">Contact US</string>
    <string name="menu_transaction">Transaction</string>
</resources>