<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".activity.other.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_200"
            android:gravity="center"
            android:text="@string/signUp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@drawable/ic_wave_top" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.1"
        android:gravity="center">

        <EditText
            android:id="@+id/input_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_box"
            android:drawableLeft="@drawable/fullname"
            android:drawablePadding="10dp"
            android:hint="@string/fullName"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/input_fullname"
            android:background="@drawable/edit_text_box"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/input_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_box"
            android:drawableLeft="@drawable/call"
            android:drawablePadding="10dp"
            android:hint="@string/mobile"
            android:inputType="text"
            android:padding="15dp"
            android:layout_below="@id/input_email"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_mobile"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_box"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/signup_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_password"
            android:layout_margin="10dp"
            android:background="@drawable/button_border_shape"
            android:padding="10dp"
            android:text="@string/signUp" />

        <TextView
            android:id="@+id/oldUserClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_click"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/already_have_account"
            android:textColor="@color/purple_200"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@drawable/ic_wave_bottom" />

</LinearLayout>