<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.other.LoginActivity"
    android:orientation="vertical"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_200"
            android:textStyle="bold"
            android:textAllCaps="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@drawable/ic_wave_top"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.1"
        android:gravity="center">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_box"
            android:padding="15dp"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:hint="@string/email"
            android:layout_margin="10dp"/>
        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_box"
            android:padding="15dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dp"
            android:layout_below="@+id/input_email"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/login_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_below="@+id/input_password"
            android:padding="10dp"
            android:background="@drawable/button_border_shape"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_click"
            android:weightSum="10"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5">

                <TextView
                    android:id="@+id/newUserClick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_new_user"
                    android:textSize="15sp"
                    android:layout_margin="10dp"
                    android:textColor="@color/purple_200"
                    android:padding="5dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5">

                <TextView
                    android:id="@+id/forgotPasswordClick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textSize="15sp"
                    android:layout_margin="10dp"
                    android:gravity="right"
                    android:textColor="@color/purple_200"
                    android:padding="5dp"/>

            </RelativeLayout>

        </LinearLayout>



       <!-- <TextView
            android:id="@+id/newUserClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_user"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:textColor="@color/purple_200"
            android:layout_below="@+id/login_click"
            android:padding="5dp"/>-->


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@drawable/ic_wave_bottom"/>

</LinearLayout>